<resources>
    <string name="app_name">Photosweep</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login fragment -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log-In</string>
    <string name="no_account_signup">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- Register fragment -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="verify">Verify</string>
    <string name="register">Register</string>

    <!-- Dashboard fragment -->
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo">Photo</string>
    <string name="print_queue">Print Queue</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <!-- Settings fragment -->
    <string name="feedback">Feedback</string>
    <string name="invite">Invite Friends</string>
    <string name="order">Order Problems</string>
    <string name="faq">FAQs</string>
    <string name="pns">Pricing and Shipping</string>
    <string name="share">Share the love</string>
    <string name="signout">Sign \nOut</string>
    <string name="personal">Personal</string>
    <string name="mail_address">Mailing Address</string>
    <string name="printing">Printing</string>
    <string name="payment">Payment</string>
    <string name="country">Country</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">ZIP Code</string>
    <string name="print">Print Every</string>
    <string name="cc">Credit Card Details</string>
    <string name="number">Number</string>
    <string name="exp">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="save">Save</string>

    <!-- PhotoDetails fragment -->
    <string name="print_on_back">Print on back of photo (Optional)</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="text">Text</string>
    <string name="recipient">Recipients</string>
</resources>
