<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polybiastudios.photosweep.SettingsFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/signout"
                    android:id="@+id/textView7"
                    android:textSize="24sp"
                    android:gravity="right" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:id="@+id/sign_out_button"
                    android:layout_margin="5dp"
                    android:src="@drawable/sign_out"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:id="@+id/textView3"
                android:textColor="@color/ps_grey"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_name_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/first_name"
                android:background="@drawable/curve_round_grn_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/last_name"
                android:background="@drawable/curve_round_grn_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_address"
                android:id="@+id/textView4"
                android:textColor="@color/ps_grey"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_1_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/address1"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_2_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/address2"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/country_edit_text"
                android:hint="@string/country"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/city_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/city"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/state_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/state"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zip_edit_text"
                android:layout_gravity="center_horizontal"
                android:hint="@string/zip"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printing"
                android:id="@+id/textView5"
                android:textColor="@color/ps_grey"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/print_edit_text"
                android:hint="@string/print"
                android:background="@drawable/curve_round_grn_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment"
                android:id="@+id/textView6"
                android:textColor="@color/ps_grey"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number_edit_text"
                android:hint="@string/number"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expiry_date_edit_text"
                android:hint="@string/exp"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cvv_edit_text"
                android:hint="@string/ccv"
                android:background="@color/ps_green_lt"
                android:padding="5dp"
                android:layout_margin="2dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Where do I find my CCV?"
                android:id="@+id/button2"
                android:background="@android:color/transparent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:background="@drawable/curve_round"
                android:layout_margin="5dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
