<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polybiastudios.photosweep.CreditCardFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number_edit_text"
        android:hint="@string/number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expiry_date_edit_text"
        android:hint="@string/exp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cvv_edit_text"
        android:hint="@string/ccv" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Where do I find my CCV?"
        android:id="@+id/button2"
        android:background="@android:color/transparent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button" />
</LinearLayout>
