<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.polybiastudios.photosweep.PhotoDetailsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView6"
        android:src="@android:drawable/ic_menu_gallery"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_on_back"
        android:id="@+id/textView3"
        android:textColor="@color/ps_grey"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_edit_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/location"
        android:background="@drawable/curve_round_grn_lt"
        android:padding="5dp"
        android:layout_margin="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_edit_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/date"
        android:background="@drawable/curve_round_grn_lt"
        android:padding="5dp"
        android:layout_margin="2dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_edit_text"
        android:layout_gravity="center_horizontal"
        android:hint="@string/text"
        android:background="@drawable/curve_round_grn_lt"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:lines="2"
        android:gravity="start" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:id="@+id/textView8"
            android:textColor="@color/ps_grey"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_weight="1" />

        <com.polybiastudios.photosweep.view.TintedImageButtonGrn
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageButton8"
            android:src="@drawable/ic_add_white_24dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipient_layout_view"></LinearLayout>

</LinearLayout>
